--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -4,6 +4,12 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  background-image: url('../assets/chartz.png');
+  background-size: cover; /* Ensure the image covers the entire section */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-attachment: fixed; /* Make the background image stay in one place while scrolling */
+  z-index: -1;
   min-height: 100vh;
   padding: 2rem;
   color: #333; /* Default text color */
@@ -48,7 +54,7 @@
   font-size: 1.8rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  color: rgba(0, 0, 0, 0.5);
+  color: #fff;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   animation: slideUp 1.2s ease-out;
 }
@@ -57,7 +63,7 @@
 .landing-text {
   font-size: 0.9rem;
   margin-bottom: 1.5rem;
-  color: grey;
+  color: #fff;
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   animation: fadeIn 1.5s ease-out; /* Fade-in animation */
 }
